--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          CI: 'true'
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
