--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build
-        env:
-          CI: 'true'
+        run: CI='true' npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
